<resources>
    <string name="app_name">URLocker</string>

    <string name="action_settings">Settings</string>

    <string name="create_new">New Entry</string>
    <string name="remove_entry">Delete Entry</string>

    <string name="entry_value">URL goes here</string>
    <string name="entry_filter">Filter Here</string>

    <string name="add_screen_title">Enter the URL below and Tag</string>
    <string name="add_screen_button">Click to Add</string>
    <string name="add_screen_url">Enter URL</string>
    <string name="add_screen_url_entry">Type or Paste URL Here</string>
    <string name="add_screen_tag">Enter Tag</string>
    <string name="add_screen_tag_entry">Type or Paste Tag Here</string>

    <string name="id_column">ID</string>
    <string name="url_column">URL Display</string>
    <string name="tag_column">Tag Setting</string>

    <string name="locker_row_id">999</string>
    <string name="locker_row_url">URL</string>
    <string name="locker_row_tag">Tag</string>

</resources>
