<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.finalprojecttake2.MainActivity">
    <item
        android:id="@+id/sw_create_new"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/create_new"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sw_create_new_2"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/create_new" />
    <item
        android:id="@+id/sw_remove_entry"
        android:icon="@drawable/ic_remove_circle_black_24dp"
        android:title="@string/remove_entry" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
